"""CHANGELOG
    - fixed getspotwithleastthreat
    - second shipyard spawns much sooner
    - ships spawned if anyone has more ships, or im maintaining a lead
    - using mean and std as per v10
"""
